search page search bar changed, blank profile update issue resoved and a few minor glitches resolved

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -441,14 +441,15 @@ input[type=text]:placeholder {
 }
 
 
-
-
-
 @media only screen and (max-width: 600px) {
-  .form-control {
-    width: 95%;
+  .search {
     text-align: center;
     
   }  
+  
+  
 }
+
+
+
 
