--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -88,8 +88,8 @@
 						<div class="well">
 							<div class="row">
 								<form th:action="@{/search}" method="get">
-									<div class="col-md-9">
-										<input type="text" style="background-color: white; text-align: left;" name="param" placeholder="Search people" class="form-control">
+									<div class="col-md-9 search">
+										<input type="text" style="background-color: white;" name="param" placeholder="Search people" class="form-control">
 									</div>
 									<div class="col-md-3">
 										<div class="btn-group" style="display:block">										  						  
