--- a/src/main/resources/templates/update-contact.html
+++ b/src/main/resources/templates/update-contact.html
@@ -135,7 +135,7 @@
 		                        
 		                        <div class="col-md-10 mb-3">
 		                            <label style="margin-top: 0.5em;" for="validationCustom02">Address:</label>
-		                            <textarea style="margin-top: 0.2em; margin-bottom: 0.5em;" class="form-control" name='address' th:value="${updateContact.address}" th:field="*{address}" id="exampleFormControlTextarea1" rows="3"></textarea>
+		                            <textarea inputmode="text" style="margin-top: 0.2em; margin-bottom: 0.5em;" class="form-control" name='address' th:value="${updateContact.address}" th:field="*{address}" id="exampleFormControlTextarea1" rows="3"></textarea>
 		                        </div>
 		
 		
