--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -128,7 +128,7 @@
 												</ul>												
 											</div>
 										</div>
-									</div>
+									</div><br>
 									<a th:href="@{/updateContact(param=${contact.id})}" type="button" class="btn button1" style="color:white;">Update</a>
 									<a th:href="@{/deleteContact(param=${contact.id})}" type="button" class="btn button2" style="color: white;">Delete</a>
 								</div>
