database changed, avatar2 bottom margin changed, update nutton top margin changed

--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -124,7 +124,7 @@
 											</div>
 										</div>
 									</div>
-									<a th:href="@{/updateContact(param=${contact.id})}" type="button" class="btn button1" style="color:white;">Update</a>
+									<a th:href="@{/updateContact(param=${contact.id})}" type="button" class="btn button1" style="color:white; margin-top: 4px;">Update</a>
 									<a th:href="@{/deleteContact(param=${contact.id})}" type="button" class="btn button2">Delete</a>
 								</div>
 							</div>
