--- a/src/main/resources/templates/add-contact.html
+++ b/src/main/resources/templates/add-contact.html
@@ -19,7 +19,7 @@
 	<div class="container" align="center"  >
 		<div class="card2" >
 			<div class="card-body" style="color: #696969;">
-				<h2 class="card-title" id="res"><b>My Contacts -v2.0</b></h2>
+				<h2 class="card-title" id="res"><b>Contact Plus -v2.3</b></h2>
 			</h3>
 			<hr>
 			</div>
@@ -112,7 +112,7 @@
 		                        </div>
 		                        <div class="col-md-4 mb-3">
 		                            <label style="margin-top: 0.5em;" for="validationCustom01">Position: </label>
-		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="text" name='position' th:field="*{position}" class="form-control" id="validationCustom01" placeholder="Password"
+		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="text" name='position' th:field="*{position}" class="form-control" id="validationCustom01" placeholder="Position"
 		                                 required>
 		                        </div>
 		                        <div class="col-md-4 mb-3">
