--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -19,7 +19,7 @@
 	<div class="container" align="center"  >
 		<div class="card2" >
 			<div class="card-body" style="color: #696969;">
-				<h2 class="card-title" id="res"><b>My Contacts -v2.0</b></h2>
+				<h2 class="card-title" id="res"><b>Contact Plus -v2.3</b></h2>
 			</h3>
 			<hr>
 			</div>
