--- a/src/main/resources/templates/add-contact.html
+++ b/src/main/resources/templates/add-contact.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="css/home.css">
 	<link rel="stylesheet" href="css/footer2.css">
 	<meta charset="ISO-8859-1">
-	<title>Insert title here</title>
+	<title>Add Contact</title>
 
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
