--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -4,9 +4,8 @@
 	<link rel="stylesheet" href="css/home.css">
 	<link rel="stylesheet" href="css/footer2.css">
 	<meta charset="ISO-8859-1">
-	<title>Insert title here</title>
+	<title>Profile</title>
 
-    <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
