--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
 	<!------ Include the above in your HEAD tag ---------->
 	<link rel="stylesheet" href="css/register.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Insert title here</title>
+<title>Register</title>
 </head>
 <body>
 
