mobile login view issue resolve, title added to each page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -111,7 +111,7 @@
 						
 						
 						<tr th:each="contact: ${allContacts}">
-							<div class="list-group list">
+							<div class="list-group">
 								<div href="#" class="list-group-item">
 									<div class="media" id="media">
 										<div class="pull-left">
