--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,466 +1,477 @@
-body{
-    margin-top:20px;
-    background:#eee;
+body {
+	margin-top: 20px;
+	background: #eee;
 }
 
 .avatar {
-  vertical-align: middle;
-  width: 320px;
-  height: 320px;
-  border-radius: 100%;
-  border: 1.5px solid #9400D3;
+	vertical-align: middle;
+	width: 320px;
+	height: 320px;
+	border-radius: 100%;
+	border: 1.5px solid #9400D3;
 }
 
 .avatar2 {
-  vertical-align: middle;
-  width: 90px;
-  height: 90px;
-  border-radius: 100%;
-  border-color: #9400D3;
-  border: 1.5px solid #9400D3;
-  margin-bottom: 5px;
+	vertical-align: middle;
+	width: 90px;
+	height: 90px;
+	border-radius: 100%;
+	border-color: #9400D3;
+	border: 1.5px solid #9400D3;
+	margin-bottom: 7px;
+	margin-right: 10px;
+	float: left;
 }
 
 .avatar3 {
-  vertical-align: middle;
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  border-color: #9400D3;
-  border: 1.5px solid #9400D3;
+	vertical-align: middle;
+	width: 50px;
+	height: 50px;
+	border-radius: 100%;
+	border-color: #9400D3;
+	border: 1.5px solid #9400D3;
 }
 
-.button1{
+.button1 {
 	background-color: #9400D3;
 	color: white;
 }
 
-.button1:hover{
+.button1:hover {
 	background-color: #6b0099;
 	color: white;
 }
 
-.button2{
+.button2 {
 	background-color: #696969;
 	color: white;
 }
 
-.button2:hover{
+.button2:hover {
 	background-color: #404040;
 	color: white;
 }
 
-.nav.nav-pills > li > a {
-    color: #777;
-    border-radius: 0!important;
-    margin-right: 10px;
-    margin-left: 10px;
+.nav.nav-pills>li>a {
+	color: #777;
+	border-radius: 0 !important;
+	margin-right: 10px;
+	margin-left: 10px;
 }
 
-.nav.nav-pills > li.active > a, 
-.nav.nav-pills > li.active > a:hover,
-.nav.nav-pills > li.active > a:focus {
-    color: #fff !important;
-    background-color: #9400D3 !important;
-
+.nav.nav-pills>li.active>a, .nav.nav-pills>li.active>a:hover, .nav.nav-pills>li.active>a:focus
+	{
+	color: #fff !important;
+	background-color: #9400D3 !important;
 }
 
 .page-people-directory .nav-contacts {
-    margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .page-people-directory .nav-contacts li a {
-    color: #666;
-    font-weight: 400;
-    font-size: 13px;
+	color: #666;
+	font-weight: 400;
+	font-size: 13px;
 }
 
 .page-people-directory .nav-contacts li .badge {
-    background: none;
-    font-weight: 500;
-    color: #333;
+	background: none;
+	font-weight: 500;
+	color: #333;
 }
 
 .page-people-directory .nav-contacts li.active .badge {
-    color: #fff;
-    background: none;
+	color: #fff;
+	background: none;
 }
 
 .page-people-directory .people-group .media img {
-    width: 45px;
+	width: 45px;
 }
 
 .page-people-directory .people-group .list-group-item {
-    -moz-transition: all 0.2s ease-out 0s;
-    -webkit-transition: all 0.2s ease-out 0s;
-    transition: all 0.2s ease-out 0s;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    margin: 0;
-    border-width: 0;
+	-moz-transition: all 0.2s ease-out 0s;
+	-webkit-transition: all 0.2s ease-out 0s;
+	transition: all 0.2s ease-out 0s;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	margin: 0;
+	border-width: 0;
 }
 
 .page-people-directory .people-group .media-heading {
-    margin-top: 5px;
+	margin-top: 5px;
 }
 
 .page-people-directory .people-group .media-heading,
-.page-people-directory .people-group .media-body {
-    line-height: normal;
+	.page-people-directory .people-group .media-body {
+	line-height: normal;
 }
 
 .page-people-directory .pagination-contact {
-    margin-top: -3px;
+	margin-top: -3px;
 }
 
 .page-people-directory .contact-group {
-    margin-top: 20px;
+	margin-top: 20px;
 }
 
 .page-people-directory .contact-group .media img {
-    width: 80px;
+	width: 80px;
 }
 
 .page-people-directory .contact-group .list-group-item {
-
+	
 }
 
 .page-people-directory .contact-group .media-heading {
-    font-size: 16px;
-    font-weight: 500;
+	font-size: 16px;
+	font-weight: 500;
 }
 
 .page-people-directory .contact-group .media-heading small {
-    margin-left: 5px;
-    font-size: 13px;
-    font-weight: 400;
-    color: #999;
+	margin-left: 5px;
+	font-size: 13px;
+	font-weight: 400;
+	color: #999;
 }
 
 .page-people-directory .contact-group .list-group-item {
-    border: none;
-    margin-top: 10px;
+	border: none;
+	margin-top: 10px;
 }
 
 .page-people-directory .contact-group .list-group-item:hover {
-    background-color: #F5F5F5;
-    transition: 0.3s;
+	background-color: #F5F5F5;
+	transition: 0.3s;
 }
 
 .page-people-directory .contact-group .media-content {
-    margin-top: 5px;
+	margin-top: 5px;
 }
 
 .page-people-directory .contact-group .fa:before {
-    font-size: 20px;
-    color:gray;
+	font-size: 20px;
+	color: gray;
 }
 
 .page-people-directory .contact-group .media-content ul {
-    margin-top: 15px;
-    margin-bottom: 0;
+	margin-top: 15px;
+	margin-bottom: 0;
 }
 
-.page-people-directory .contact-group .media-content ul > li {
-    display: inline-block;
-    min-width: 200px;
-    margin-bottom: 5px;
+.page-people-directory .contact-group .media-content ul>li {
+	display: inline-block;
+	min-width: 200px;
+	margin-bottom: 5px;
 }
 
 .page-people-directory .well {
-    border-radius: 0px;
-    border: none;
+	border-radius: 0px;
+	border: none;
 }
 
 .page-people-directory .list-group-item:first-child {
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
+	border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
 }
 
 .page-people-directory .page-title {
-    text-transform: uppercase;
+	text-transform: uppercase;
 }
 
 .page-people-directory .btn-add-new-contact {
-    float: right;
+	float: right;
 }
 
-@media (max-width: 992px) { 
-    .page-people-directory .btn-add-new-contact {
-        float: left;
-    }
+@media ( max-width : 992px) {
+	.page-people-directory .btn-add-new-contact {
+		float: left;
+	}
 }
-
-
 
 /* ============================================================
 CONTACT MODAL VIEW
 ============================================================ */
 .page-people-directory .modal-pull-right .modal-dialog {
-    max-width: 720px;
+	max-width: 720px;
 }
 
 .page-people-directory .modal-pull-right .modal-dialog .modal-body {
-    width: 100%;
+	width: 100%;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .modal-close h4 {
-    padding-left: 15px;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .modal-close h4
+	{
+	padding-left: 15px;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .col-md-12 {
-    padding: 0px;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .col-md-12
+	{
+	padding: 0px;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header {
-    width: 100%;
-    height: 280px;
-    text-align: center;
-    overflow: inherit;
-    background-repeat:no-repeat;
-    background-size:cover;
-    background-position:center;
-    border-bottom: 5px solid gray;
-    filter:grayscale(100%);
-    -webkit-filter:grayscale(100%);
-    -moz-filter:grayscale(100%);
-    -webkit-transition:all 0.3s ease;
-    -moz-transition:all 0.3s ease;
-    -o-transition:all 0.3s ease;
-    -ms-transition:all 0.3s ease;
-    transition:all 0.3s ease;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header
+	{
+	width: 100%;
+	height: 280px;
+	text-align: center;
+	overflow: inherit;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	border-bottom: 5px solid gray;
+	filter: grayscale(100%);
+	-webkit-filter: grayscale(100%);
+	-moz-filter: grayscale(100%);
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
+	transition: all 0.3s ease;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header:hover {
-    filter:grayscale(0%);
-    -webkit-filter:grayscale(0%);
-    -moz-filter:grayscale(0%);
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header:hover
+	{
+	filter: grayscale(0%);
+	-webkit-filter: grayscale(0%);
+	-moz-filter: grayscale(0%);
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .profile-image-container {
-    margin-top: 211px;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .profile-image-container
+	{
+	margin-top: 211px;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .profile-image-container img {
-    border:5px solid gray;
-    border-radius: 60%;
-    -moz-border-radius: 60%;
-    -webkit-border-radius: 60%;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .profile-image-container img
+	{
+	border: 5px solid gray;
+	border-radius: 60%;
+	-moz-border-radius: 60%;
+	-webkit-border-radius: 60%;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .contact-info {
-    width: 100%;
-    position: absolute;
-    margin-top: 120px;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .contact-info
+	{
+	width: 100%;
+	position: absolute;
+	margin-top: 120px;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .contact-info .contact-name {
-    font-weight: bold;
-    color: #fff;
-    font-size: 30px;
-    text-align:center;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .contact-info .contact-name
+	{
+	font-weight: bold;
+	color: #fff;
+	font-size: 30px;
+	text-align: center;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .contact-info .contact-skills ul {
-    list-style: none;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .contact-info .contact-skills ul
+	{
+	list-style: none;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .contact-info .contact-skills ul li {
-    display: block;
-    width: 60px;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .contact-info .contact-skills ul li
+	{
+	display: block;
+	width: 60px;
 }
 
 .page-people-directory .modal-pull-right .modal-dialog .dialog-close {
-    width: 100%;
-    position: absolute;
-    margin-top: 20px;
+	width: 100%;
+	position: absolute;
+	margin-top: 20px;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .dialog-close li {
-    cursor: pointer;
-    color: white;
-    text-align: right;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .dialog-close li
+	{
+	cursor: pointer;
+	color: white;
+	text-align: right;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .dialog-close li span.fa {
-    font-size: 35px;
-    font-weight: bold;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .dialog-close li span.fa
+	{
+	font-size: 35px;
+	font-weight: bold;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .dialog-close li span.fa:hover {
-    color: gray;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-header .dialog-close li span.fa:hover
+	{
+	color: gray;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-view-content .contact-view-action {
-    margin-right: 15px;
-    margin-top: 15px;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-view-content .contact-view-action
+	{
+	margin-right: 15px;
+	margin-top: 15px;
 }
 
-.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-view-content .contact-view-info {
-    margin-top: 15px;
+.page-people-directory .modal-pull-right .modal-dialog .modal-body .contact-view-content .contact-view-info
+	{
+	margin-top: 15px;
 }
 
 .page-people-directory .contact-info-container {
-    height: 250px;
-    margin-top: 80px;
-    position: absolute;
-    width: 100%;
-}   
+	height: 250px;
+	margin-top: 80px;
+	position: absolute;
+	width: 100%;
+}
 
 .page-people-directory .contact-add-content {
-    padding: 40px;
+	padding: 40px;
 }
 
 .page-people-directory .close-right-modal {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .page-people-directory .close-right-modal:hover {
-    opacity: .8;
+	opacity: .8;
 }
 
 .page-people-directory .basic-info-scroll {
-    height: 425px;
-    overflow-x: hidden;
+	height: 425px;
+	overflow-x: hidden;
 }
 
-
-@media (max-width: 800px) {
-    .page-people-directory .contact-top-bar {
-        text-align: left;
-        width: 100%;
-    }
-
-    .page-people-directory .contact-top-bar .btn-add-new-contact {
-        margin-bottom: 10px;
-        display: block;
-    }
-
-    .page-people-directory .contact-top-bar .txt-search-contact {
-        margin-bottom: -5px;
-    }
+@media ( max-width : 800px) {
+	.page-people-directory .contact-top-bar {
+		text-align: left;
+		width: 100%;
+	}
+	.page-people-directory .contact-top-bar .btn-add-new-contact {
+		margin-bottom: 10px;
+		display: block;
+	}
+	.page-people-directory .contact-top-bar .txt-search-contact {
+		margin-bottom: -5px;
+	}
 }
-
-
-
-
-
-
-
-
-
 
 input[type=text] {
-  background-color: #f6f6f6;
-  text-align: center;
-  transition: all 0.5s ease-in-out;
-  -webkit-border-radius: 5px 5px 5px 5px;
-  border-radius: 5px 5px 5px 5px;
+	background-color: #f6f6f6;
+	text-align: center;
+	transition: all 0.5s ease-in-out;
+	-webkit-border-radius: 5px 5px 5px 5px;
+	border-radius: 5px 5px 5px 5px;
 }
 
 input[type=email] {
-  background-color: #f6f6f6;
-  text-align: center;
-  transition: all 0.5s ease-in-out;
-  -webkit-border-radius: 5px 5px 5px 5px;
-  border-radius: 5px 5px 5px 5px;
+	background-color: #f6f6f6;
+	text-align: center;
+	transition: all 0.5s ease-in-out;
+	-webkit-border-radius: 5px 5px 5px 5px;
+	border-radius: 5px 5px 5px 5px;
 }
 
 input[type=tel] {
-  background-color: #f6f6f6;
-  text-align: center;
-  transition: all 0.5s ease-in-out;
-  -webkit-border-radius: 5px 5px 5px 5px;
-  border-radius: 5px 5px 5px 5px;
+	background-color: #f6f6f6;
+	text-align: center;
+	transition: all 0.5s ease-in-out;
+	-webkit-border-radius: 5px 5px 5px 5px;
+	border-radius: 5px 5px 5px 5px;
 }
 
 input[type=file] {
-  background-color: #f6f6f6;
-  text-align: center;
-  transition: all 0.5s ease-in-out;
-  -webkit-border-radius: 5px 5px 5px 5px;
-  border-radius: 5px 5px 5px 5px;
+	background-color: #f6f6f6;
+	text-align: center;
+	transition: all 0.5s ease-in-out;
+	-webkit-border-radius: 5px 5px 5px 5px;
+	border-radius: 5px 5px 5px 5px;
 }
 
 textarea[inputmode=text] {
-  background-color: #f6f6f6;
-  text-align: left;
-  transition: all 0.5s ease-in-out;
-  -webkit-border-radius: 5px 5px 5px 5px;
-  border-radius: 5px 5px 5px 5px;
+	background-color: #f6f6f6;
+	text-align: left;
+	transition: all 0.5s ease-in-out;
+	-webkit-border-radius: 5px 5px 5px 5px;
+	border-radius: 5px 5px 5px 5px;
 }
 
 input[type=email]:focus {
-  background-color: #fff;
-  border: 2px solid #9400D3;
+	background-color: #fff;
+	border: 2px solid #9400D3;
 }
 
 input[type=tel]:focus {
-  background-color: #fff;
-  border: 2px solid #9400D3;
+	background-color: #fff;
+	border: 2px solid #9400D3;
 }
 
 input[type=password]:focus {
-  background-color: #fff;
-  border: 2px solid #9400D3;
+	background-color: #fff;
+	border: 2px solid #9400D3;
 }
 
 input[type=text]:focus {
-  background-color: #fff;
-  border: 2px solid #9400D3;
+	background-color: #fff;
+	border: 2px solid #9400D3;
 }
 
 input[type=file]:focus {
-  background-color: #fff;
-  border: 2px solid #9400D3;
+	background-color: #fff;
+	border: 2px solid #9400D3;
 }
 
 textarea[inputmode=text]:focus {
-  background-color: #fff;
-  border: 2px solid #9400D3;
+	background-color: #fff;
+	border: 2px solid #9400D3;
 }
 
 input[type=text]:placeholder {
-  color: #cccccc;
+	color: #cccccc;
 }
 
 input[type=email]:placeholder {
-  color: #cccccc;
+	color: #cccccc;
 }
 
 input[type=tel]:placeholder {
-  color: #cccccc;
+	color: #cccccc;
 }
 
 input[type=file]:placeholder {
-  color: #cccccc;
+	color: #cccccc;
 }
 
 input[type=text]:placeholder {
-  color: #cccccc;
+	color: #cccccc;
 }
-
 
 @media only screen and (max-width: 600px) {
-  .search {
-    text-align: center;
-    
-  }  
-  
-  .avatar{
-  	vertical-align: middle;
-  	width: 265px;
-  	height: 265px;
-  	border-radius: 100%;
-  	border: 1.5px solid #9400D3;
-  }
-  
-  .media{
-  	align-content: center;
-  }
+	.search {
+		text-align: center;
+	}
+	
+	.avatar {
+		vertical-align: middle;
+		width: 265px;
+		height: 265px;
+		border-radius: 100%;
+		border: 1.5px solid #9400D3;
+	}	
+	
+	#media{
+		display: block;
+		margin: 0 auto;
+		width: 30%;
+		content: "";
+  		clear: both;
+  		display: table;
+	}
+	
+	.med{
+		margin: auto;
+  		width: 70%;   
+   		display:block;
+	}
+	
+	#media2{
+  		width: 45%;
+	}
+	
 }
-
-
-
-
