--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -448,11 +448,10 @@ input[type=text]:placeholder {
 	}
 	
 	.avatar {
-		vertical-align: middle;
-		width: 265px;
-		height: 265px;
-		border-radius: 100%;
-		border: 1.5px solid #9400D3;
+		border-radius: 50%;
+		display: block;
+		margin: auto;
+		
 	}	
 	
 	#media{
