--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -442,12 +442,12 @@ input[type=text]:placeholder {
 	color: #cccccc;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 600px) {
 	.search {
 		text-align: center;
 	}
 	
-	.avatar {
+	.avatar img {
 		display: block;
   		margin: auto;
 		border-radius: 50%;
