delete button unlinked

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -150,7 +150,8 @@
         					
         						<div class='col-md-10 mb-3'><br><br>
                     				<button style="margin-top: 0.5em; margin-bottom: 0.5em; color: white;" type="submit" name="submit" class="btn btn-lg button1">Submit</button>
-                    				<a th:href="@{/deleteProfile(param=${profile.id})}" onclick="return confirm('Are you sure you want to delete this item?');" type="button" class="btn btn-lg button2" style="color: white; margin-top: 0.5em; margin-bottom: 0.5em;">Delete Account</a>
+                    				<!-- <a th:href="@{/deleteProfile(param=${profile.id})}" onclick="return confirm('Are you sure you want to delete this item?');" type="button" class="btn btn-lg button2" style="color: white; margin-top: 0.5em; margin-bottom: 0.5em;">Delete Account</a>-->
+                    				<a href="" onclick="return confirm('Are you sure you want to delete this item?');" type="button" class="btn btn-lg button2" style="color: white; margin-top: 0.5em; margin-bottom: 0.5em;">Delete Account</a>
                     				<br><br><br><br><br>
 								</div>
 		                        
