forgot password removed

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
 	    <!-- Remind Passowrd -->
 	    <div id="formFooter">
 	      Do not have an account? <a class="underlineHover" th:href="@{/register}">Register here</a>
-	      <a class="underlineHover" href="#">Forgot Password?</a>
+	      <!-- <a class="underlineHover" href="#">Forgot Password?</a> -->
 	    </div>
 	
 	  </div>
