Register page updated

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,7 +16,7 @@
 	    <div class="container" align="center">
 			<div class="card2" >
 				<div class="card-body" style="color: #007b5e;">
-					<h2 class="card-title" id="res"><b>Contact Manager Registration</b></h2>				
+					<h2 class="card-title" id="res"><b>Contact Plus Registration</b></h2>				
 				</div>
 			</div>
 		</div>
